<resources>
    <string name="app_name">ControlJornada</string>
    <string name="splash_imgLogo_contentDescription">Imagen del logo</string>
    <string name="tieUser">Nombre de Usuario</string>
    <string name="tiePassword">Contraseña</string>
    <string name="login_text_chkRemember">Recuerdame</string>
    <string name="login_btSignUp_text">REGISTRAR</string>
    <string name="login_tvLogin_text">Iniciar sesión con otras plataformas</string>
    <string name="login_btSignIn_text">Entrar</string>
    <string name="login_tvName_text">Control de Jornada</string>
    <string name="login_tvOtherLogin_text">Iniciar sesion con otras plataformas</string>
    <string name="singup_label">Registro</string>
    <string name="SignUp_tieUser_hint">Nombre Completo</string>
    <string name="SignUp_tieEmail_hint">Introduce tu email</string>
    <string name="SignUp_tiePassword_hint">Introduce Contraseña</string>
    <string name="SignUp_tieConfirmPassword_hint">Confirma tu contraseña</string>
    <string name="SignUp_tieName_hint">Nombre</string>
    <string name="SignUp_tieSurname_hint">Apellidos</string>
    <string name="SignUp_tieConfirmPin_hint">Confirmar pin</string>
    <string name="SignUp_tiePin_hint">Introduce tu pin</string>
    <string name="singup_chkPolitics">He leido y acepto la politica de privacidad</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="horario_text">Control de Jornada</string>
    <string name="horarioItem_tvSalida_text">Salida</string>
    <string name="horarioItem_tvEntrada_text">Entrada</string>
    <string name="horarioItem_button_text">Añadir lugar de trabajo</string>
    <string name="horarioItem_edLugarTrabajo_hint">Lugar de trabajo</string>
    <string name="horario_tvFecha_text">Jueves ,28 de octubre de 2021</string>
    <string name="horario_tvMotivoAusencia_text">¿Motivo de la ausencia?</string>
    <string name="horario_btFirma_text">Firmar</string>
    <string name="horario_btAusencia_text">Indicar el motivo</string>
    <string name="action_aboutus">Sobre Nosotros</string>
    <string name="action_settings">Ajustes</string>
    <string name="horario_item_menu">Menu</string>
    <string name="ausencia_tvMotivoAusencia_text">Motivo de la ausencia</string>
    <string name="ausencia_btEnviar_text">Enviar</string>
    <string name="ausencia_btCancelar_text">Cancelar</string>
    <string name="back" translatable="false"><![CDATA[<-]]></string>
    <string name="forward" translatable="false"><![CDATA[->]]></string>
    <string name="calendario_tvCalendario_text">Jueves,28 de octubre de 2021</string>
    <string name="calendario_tvHoras_text">Horas Totales:  9</string>
    <string name="calendario_tvLugar_text">Lugar de trabajo mañana:</string>
    <string name="calendario_tvLugar2_text">Lugar de trabajo tarde:</string>
    <string name="app_description">Esta seria la descripcion de la persona</string>
    <string name="calendario_btSobreNosotros_text">Sobre Nosotros</string>
    <string name="calendario_btAjustes_text">Ajustes</string>
    <string name="Ajustes_btGenerar">Generar Informes</string>
    <string name="Ajustes_btSobreNosotros">Sobre nosotros</string>
    <string name="Ajustes_btManual">Manual del usuario</string>
    <string name="Ajustes_btVersion">Version</string>
    <string name="Ajustes_btPreferencia">Preferencias</string>
    <string name="Ajustes_btPerfil">Perfil del usuario</string>
    <string name="profile_tvDatosPersonales">Datos Personales</string>
    <string name="ajustes_tieApellido_hint">Apellidos</string>
    <string name="ajustes_tieEdad_hint">Edad</string>
    <string name="profile_tvGenero_text">"Genero: "</string>
    <string name="profile_tvDireccion">Direccion</string>
    <string name="SignUp_tieEmpresa_hint">Empresa</string>
    <string name="SignUp_tieLocalidad_hint">Localidad</string>
    <string name="profile_tvMetodoContactos">Metodo de contacto</string>
    <string name="profile_tieTelefono_hint">Telefono</string>
    <string name="horario_tvhorarioMañana_text">Horario de la mañana</string>
    <string name="horario_tvhorarioTarde_text">Horario de la tarde</string>
    <string name="ajustes_btNumeroHorasMensuales">Numero de horas mensual</string>
    <string name="ction_order_byNombre">Ordenar por nombre alfabeticamente</string>
    <string name="action_order_byNumeroHoras">Ordenar por numero de horas</string>
    <string name="action_search">Buscar</string>
    <string name="name_actionbar">Control de jornada</string>
    <string name="horario_tvUserName_text">Pablo Infantes Sosa</string>
    <string name="horario_tvNumeroHoras_text">"Numero de horas: "</string>
    <string name="horario_tvNumeroHorasLabel_text">9</string>
    <string name="fdmanage_tieName_hint">Nombre</string>
    <string name="fdmanage_tieNumeroHoras_hint">Numero de horas</string>
    <string name="fdmanage_tieNombreCorto_hint">Nombre corto</string>
    <string name="tituloEditar">Editar Usuario</string>
    <string name="title_delete_user">Eliminar Usuario </string>
    <string name="message_delete_user">¿Quiere eliminar el usuario %1$s  ?</string>
    <string name="undo">UNDO</string>
    <string name="ajustes_btObras">Obras</string>
    <string name="action_order_obra">Ordenar obras por nombre</string>
    <string name="action_order_obra_bydescription">Ordenar obras por descripcion</string>
    <string name="message_delete_obra">¿Quiere eliminar la obra %1$s ?</string>
    <string name="title_delete_obra">Eliminar Obra</string>
    <string name="fdmanage_tieDescription_hint">Descripcion</string>
    <string name="fdmanage_tieShortName_hint">Nombre Corto</string>
    <string name="titleEditObra">Editar Obra</string>
    <!-- Preference Titles -->
    <string name="messages_header" translatable="false">Messages</string>
    <string name="sync_header" translatable="false">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title" translatable="false">Your signature</string>
    <string name="reply_title" translatable="false">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title" translatable="false">Sync email periodically</string>
    <string name="attachment_title" translatable="false">Download incoming attachments</string>
    <string name="attachment_summary_on" translatable="false">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off" translatable="false">Only download attachments when manually requested</string>
    <string name="privacy_and_condition">Condiciones y privacidad</string>
    <string name="key_help">ayuda</string>
    <string name="help_point">Centro de ayuda</string>
    <string name="help_header">Ayuda</string>
    <string name="informacion_header">Información</string>
    <string name="nombreEmpresa">Infantes</string>
    <string name="tituloEmpresa">Nombre de la empresa</string>
    <string name="key_empresa">empresa</string>
    <string name="key_version">version</string>
    <string name="versionApp">Version de la aplicación</string>
    <string name="numVersion">1.0</string>
    <string name="key_account">cuenta</string>
    <string name="title_account">Cuenta</string>
    <string name="summary_account">Privacidad, mensajes, seguridad</string>
    <string name="notification_header">Notificaciones</string>
    <string name="notification">Notificaciones</string>
    <string name="notification_summary">Activar las notificaciones de nuestra aplicación</string>
    <string name="key_ringtone">sonido</string>
    <string name="title_ringtone">Sonido de la notificación</string>
    <string name="summary_ringtone">Seleccionar el tono de las notificaciones</string>
    <string name="key_user">user</string>
    <string name="title_user">Usuario</string>
    <string name="key_password">password</string>
    <string name="title_password">Contraseña</string>
    <string name="name_channel">ControlJornada_Channel</string>
    <string name="tvUser">Pablo Infantes Sosa</string>
    <string name="tvEmail">pabloinfantes@gmail.com</string>
    <string name="menu_options">Opciones</string>
    <string name="horarioFragment">Horario</string>
    <string name="listadoNumeroHorasFragment">Usuarios</string>
    <string name="listObraFragment">Obras Actuales</string>
    <string name="horario">Horario</string>
    <string name="ausencia">Ausencia</string>
    <string name="calendario">Calendario</string>
    <string name="about_us">Sobre nosotros</string>
    <string name="perfil">Perfil</string>
    <string name="numHoras">Usuarios</string>
    <string name="anadirHoras">Añadir trabajador</string>
    <string name="obra">Obras Actuales</string>
    <string name="addObra">Añadir Obra</string>
    <string name="ajustes">Ajustes</string>
    <string name="cuenta">Cuenta</string>
    <string name="key_hora">hora</string>
    <string name="title_hora">Hora de la notificacion</string>
    <string name="summary_hora">Selecciona la hora en la que quiere la notificación</string>
    <string name="notification_title_add_usuario">Se ha creado un nuevo usuario</string>
    <string name="notification_title_add_obra">Se ha creado una nueva obra</string>
    <string name="orderObra">orderObra</string>
    <string name="order_alfabeticamente_obra">Pulsa para ordenar siempre alfabeticamente las obras</string>
    <string name="orderUser">orderUser</string>
    <string name="order_alfabeticamente_user">Pulsa para ordenar siempre alfabeticamente los usuarios</string>
    <string name="orden_header">Tipo de orden</string>
    <string name="order_obra">Ordenar obra por nombre</string>
    <string name="order_user">Ordenar usuarios por nombre</string>
    <string name="title_activity_main_admin">MainActivityAdmin</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment" translatable="false">Hello first fragment</string>
    <string name="hello_second_fragment" translatable="false">Hello second fragment. Arg: %1$s</string>
    <string name="guardar">Guardar</string>
    <string name="cerrarsesion">Cerrar Sesion</string>
    <string name="enfermedad">Enfermedad</string>
    <string name="personal">Personal</string>
    <string name="festivo">Festivo</string>
    <string name="vacaciones">Vacaciones</string>
    <string name="recuperacion">Recuperación de horas</string>
    <string name="maternidad">Maternidad</string>
    <string name="paternidad">Paternidad</string>
    <string name="otros">Otros</string>
    <string name="admin">admin:</string>
    <string name="profile_tvInfo">Informacion</string>
    <string name="email">Correo Electronico</string>
    <string name="edit">EDITAR</string>
    <string name="btOlvidar">¿Olvidaste tu contraseña?</string>
    <string name="title_activity_forgot_password">ForgotPassword</string>
    <string name="recuperar">RECUPERAR</string>
    <string name="ingresaCorreo">Ingresa tu correo</string>
    <string name="tvRecupera">Recupera tu contraseña</string>
    <string name="tvLugarTrabajoMnn">Lugar de trabajo por la mañana</string>
    <string name="tvLugarTrabajoTarde">Lugar de trabajo por la tarde</string>
    <string name="tvLogin">Login</string>
    <string name="tvSigUp">Registrate</string>
    <string name="tituloCreador">Nombre del creador de la aplicacion</string>


</resources>