<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph.xml"
    app:startDestination="@id/horarioContenedorFragment">

    <fragment
        android:id="@+id/ausenciaFragment"
        android:name="com.example.controljornada.ui.ausencia.AusenciaFragment"
        android:label="@string/ausencia"
        tools:layout="@layout/fragment_ausencia" />
    <fragment
        android:id="@+id/aboutUsFragment"
        android:name="com.example.controljornada.ui.aboutus.AboutUsFragment"
        android:label="@string/about_us" />
    <fragment
        android:id="@+id/listadoNumeroHorasFragment"
        android:name="com.example.controljornada.ui.listadohoras.ListadoNumeroHorasFragment"
        android:label="@string/numHoras"
        tools:layout="@layout/fragment_listado_numero_horas" >
        <action
            android:id="@+id/action_listadoNumeroHorasFragment_to_listManageFragment"
            app:destination="@id/listManageFragment" />
        <action
            android:id="@+id/action_listadoNumeroHorasFragment_to_baseDialogFragment"
            app:destination="@id/baseDialogFragment" />
    </fragment>
    <fragment
        android:id="@+id/listManageFragment"
        android:name="com.example.controljornada.ui.listadohoras.ListManageFragment"
        android:label="@string/anadirHoras"
        tools:layout="@layout/fragment_list_manage" >
        <argument
            android:name="user"
            app:argType="com.example.controljornada.data.model.User"
            app:nullable="true" />
    </fragment>
    <dialog
        android:id="@+id/baseDialogFragment"
        android:name="com.example.controljornada.ui.base.BaseDialogFragment"
        android:label="BaseDialogFragment" />
    <fragment
        android:id="@+id/listObraFragment"
        android:name="com.example.controljornada.ui.obra.ListObraFragment"
        android:label="@string/obra"
        tools:layout="@layout/fragment_list_obra" >
        <action
            android:id="@+id/action_listObraFragment_to_baseDialogFragment"
            app:destination="@id/baseDialogFragment" />
        <action
            android:id="@+id/action_listObraFragment_to_obraManageFragment"
            app:destination="@id/obraManageFragment" />
    </fragment>
    <fragment
        android:id="@+id/obraManageFragment"
        android:name="com.example.controljornada.ui.obra.ObraManageFragment"
        android:label="@string/addObra"
        tools:layout="@layout/fragment_obra_manage" >
        <argument
            android:name="obra"
            app:argType="com.example.controljornada.data.model.Obra"
            app:nullable="true" />
    </fragment>
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.example.controljornada.ui.preferences.SettingsFragment"
        android:label="@string/ajustes" >
        <action
            android:id="@+id/action_settingsFragment_to_accountFragment"
            app:destination="@id/accountFragment" />
    </fragment>
    <fragment
        android:id="@+id/accountFragment"
        android:name="com.example.controljornada.ui.preferences.AccountFragment"
        android:label="@string/cuenta" />
    <fragment
        android:id="@+id/horarioContenedorFragment"
        android:name="com.example.controljornada.ui.horario.HorarioContenedorFragment"
        android:label="@string/horario" >
        <action
            android:id="@+id/action_horarioContenedorFragment_to_ausenciaFragment"
            app:destination="@id/ausenciaFragment" />
    </fragment>
</navigation>