<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.horario.HorarioFragment">


    <TextView
        android:id="@+id/tvLugar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/ausencia_tvLugar_layout_marginStart"
        android:layout_marginTop="@dimen/ausencia_tvLugar_layout_marginStart"
        android:layout_marginEnd="@dimen/ausencia_tvLugar_layout_marginStart"
        android:fontFamily="@font/officialbook"
        android:text="@string/ausencia_tvMotivoAusencia_text"
        android:textColor="@color/black"
        android:textSize="@dimen/horario_tvFecha_textSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvFecha_ausencia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/officialbook"
        android:text="@string/horario_tvFecha_text"
        android:textColor="@color/colorGrey"
        android:textSize="@dimen/ausencia_tvFecha_textSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLugar" />


    <!--<androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinatorLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/ausencia_coordinator_layout_marginTop"
        android:layout_marginBottom="@dimen/ausencia_coordinator_layout_marginTop"
        app:layout_constraintBottom_toTopOf="@+id/btCancelar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvFecha_ausencia">


        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvAusencia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </RadioGroup>


    </androidx.coordinatorlayout.widget.CoordinatorLayout>-->


    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvFecha_ausencia">


        <RadioButton
            android:id="@+id/enfermedad"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawableLeft="@drawable/ic_action_enfermedad"
            android:drawablePadding="10dp"
            android:text="@string/enfermedad"/>

        <RadioButton
            android:id="@+id/personal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawableLeft="@drawable/ic_action_personal"
            android:drawablePadding="10dp"
            android:text="@string/personal" />

        <RadioButton
            android:id="@+id/festivo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawableLeft="@drawable/ic_action_festivo"
            android:drawablePadding="10dp"
            android:text="@string/festivo" />

        <RadioButton
            android:id="@+id/vacaciones"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawableLeft="@drawable/ic_action_vacaciones"
            android:drawablePadding="10dp"
            android:text="@string/vacaciones" />

        <RadioButton
            android:id="@+id/recuperacion"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawableLeft="@drawable/ic_action_recuperacion"
            android:drawablePadding="10dp"
            android:text="@string/recuperacion" />

        <RadioButton
            android:id="@+id/maternidad"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawableLeft="@drawable/ic_action_maternidad"
            android:drawablePadding="10dp"
            android:text="@string/maternidad" />

        <RadioButton
            android:id="@+id/paternidad"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawableLeft="@drawable/ic_action_paternidad"
            android:drawablePadding="10dp"
            android:text="@string/paternidad" />

        <RadioButton
            android:id="@+id/otros"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawableLeft="@drawable/ic_action_otros"
            android:drawablePadding="10dp"
            android:text="@string/otros" />


    </RadioGroup>


    <Button
        android:id="@+id/btEnviar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/ausencia_btEnviar_text"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btCancelar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/colorRed"
        android:text="@string/ausencia_btCancelar_text"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>