<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >


    <TextView
        android:id="@+id/tvUsuarioNombre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:textSize="20sp"
        android:text="Pablo Infantes Sosa"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
    android:id="@+id/tvDatosPersonales"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginTop="8dp"
    android:text="@string/profile_tvDatosPersonales"
    android:textStyle="bold"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/tvUsuarioNombre" />


    <Spinner
        android:id="@+id/spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvGenero"
        tools:ignore="SpeakableTextPresentCheck" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilName"
        style="@style/LoginTextHintApparience.SignUp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDatosPersonales"
        app:startIconDrawable="@drawable/ic_tiluser_person">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tieName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/SignUp_tieName_hint" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilApellido"
        style="@style/LoginTextHintApparience.SignUp"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilName"
        app:startIconDrawable="@drawable/ic_tiluser_person">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tieApellido"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/ajustes_tieApellido_hint" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilEdad"
        style="@style/LoginTextHintApparience.SignUp"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/tilApellido"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tilApellido"
        app:startIconDrawable="@drawable/ic_tiluser_person">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tieEdad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ajustes_tieEdad_hint" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvGenero"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/profile_tvGenero_text"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilEdad" />


    <TextView
        android:id="@+id/tvMetodoContactos"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/profile_tvMetodoContactos"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner" />



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilEmpresa"
        style="@style/LoginTextHintApparience.SignUp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvMetodoContactos"
        app:startIconDrawable="@drawable/ic_tiluser_person">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tieEmpresa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/SignUp_tieEmpresa_hint" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilTelefono"
        style="@style/LoginTextHintApparience.SignUp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilEmpresa"
        app:startIconDrawable="@drawable/ic_tiluser_person">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tieTelefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/profile_tieTelefono_hint" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btGuardarDatos"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:text="@string/guardar"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilTelefono" />

    <Button
        android:id="@+id/btCerrarSesion"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/colorRed"
        android:text="@string/cerrarsesion"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@+id/tilTelefono" />

</androidx.constraintlayout.widget.ConstraintLayout>